--- a/MedPullKiosk/app/src/main/AndroidManifest.xml
+++ b/MedPullKiosk/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
 
+    <!-- Microphone for speech-to-text -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <!-- Wake lock for background sync -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
